fix(LoginModal): rocket gif alignment and aspect ratio

--- a/assets/css/components/_modals.scss
+++ b/assets/css/components/_modals.scss
@@ -313,7 +313,6 @@
   //Specific to the first login modal
   .rocket-gif {
     border-radius: 5px;
-    width: 228px;
     height: 430px;
   }
   .advanced-send-scroll { 
